add icons and make headers inline

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <script>less = { env: 'development'};</script>
   <script src="less.js"></script>
   <script>less.watch();</script>
-  
+
   <script type='module' src="app.js" defer></script>
   <script src="https://kit.fontawesome.com/318a6450cb.js" crossorigin="anonymous"></script>
 </head>
@@ -20,16 +20,16 @@
   <div class="container">
     <div class="header">
       <i class="fab fa-free-code-camp"></i>
-      <h3>Editor</h3>
-      <button class="editor-enlarge"><i class=""></i></button>
+      Editor
+      <i class="fas fa-expand-arrows-alt enlarge"></i>
     </div>
     <textarea class="view" id="editor"></textarea>
   </div>
   <div class="container">
     <div class="header">
       <i class="fab fa-free-code-camp"></i>
-      <h3>Previewer</h3>
-      <button class="previewer-enlarge"><i class=""></i></button>
+      Previewer
+      <i class="fas fa-expand-arrows-alt enlarge"></i>
     </div>
     <div class="view" id="preview"></div>
   </div>
