change header's text and resize to button

--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
   <div class="container">
     <div class="header">
       <i class="icon fab fa-free-code-camp"></i>
-      Editor
-      <i class="resize fas fa-expand-arrows-alt"></i>
+      <span class="name">Editor</span>
+      <i class="button"></i>
     </div>
     <textarea class="view" id="editor"></textarea>
   </div>
   <div class="container">
     <div class="header">
       <i class="icon fab fa-free-code-camp"></i>
-      Previewer
-      <i class="resize fas fa-expand-arrows-alt"></i>
+      <span class="name">Previewer</span>
+      <i class="button"></i>
     </div>
     <div class="view markdown-body" id="preview"></div>
   </div>
