--- a/index.html
+++ b/index.html
@@ -7,11 +7,7 @@
   <title>Markdown Previewer</title>
 
   <link rel="stylesheet" href="markdown.css"/>
-  <link type="text/css" rel="stylesheet/less" href="index.less"/>
-  <script src="less.js" type="text/javascript"></script>
-  <script>less = { env: 'development'};</script>
-  <script src="less.js"></script>
-  <script>less.watch();</script>
+  <link rel="stylesheet" href="index.css"/>
 
   <script type='module' src="app.js" defer></script>
   <script src="https://kit.fontawesome.com/318a6450cb.js" crossorigin="anonymous"></script>
