--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Markdown Previewer</title>
 
   <link rel="stylesheet" href="markdown.css"/>
-  <link rel="stylesheet" href="less.css"/>
+  <link rel="stylesheet" href="index.css"/>
 
   <script type='module' src="app.js" defer></script>
   <script src="https://kit.fontawesome.com/318a6450cb.js" crossorigin="anonymous"></script>
