add favicon.ico attempt 1

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
   <link rel="stylesheet" href="markdown.css"/>
   <link rel="stylesheet" href="index.css"/>
+  <link rel="shortcut icon" type="image/x-icon" href="https://oscarchankalung.github.io/favicon.ico">
 
   <script type='module' src="app.js" defer></script>
   <script src="https://kit.fontawesome.com/318a6450cb.js" crossorigin="anonymous"></script>
